[package]
name = "sunset-demo-embassy-common"
description = "Shared code for Sunset demos"
version = "0.1.0"
edition = "2021"

[dependencies]
sunset-embassy = { path = "../../" }
sunset = { path = "../../.." }
sunset-sshwire-derive = { version = "0.1", path = "../../../sshwire-derive" }

embassy-sync = { version = "0.5" }
embassy-net = { version = "0.4", features = ["tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-driver = { version = "0.2" }
embassy-futures = { version = "0.1" }
embassy-time = { version = "0.3" }

heapless = "0.8"
# using local fork
# menu = "0.3"
embedded-io-async = "0.6"
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
bcrypt = { version = "0.15", default-features = false }
ed25519-dalek = { version = "2.0.0-rc.2", default-features = false }

defmt = { version = "0.3", optional = true }
log = "0.4"
pretty-hex = { version = "0.4", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0" }
sunset = { path = "../../..", features = ["std"] }
tokio = { version = "1.25", features = ["full"] }

[features]
defmt = ["dep:defmt", "embedded-io-async/defmt-03", "embassy-net/defmt"]
log = ["embassy-net/log"]
