[package]
name = "sunset-demo-embassy-std"
version = "0.1.0"
edition = "2021"

[workspace]
# blank

[dependencies]
embassy-executor = { version = "0.1.0",  default-features=false, features = ["log", "std", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1",  default-features=false, features = ["log", "std"] }
# embassy-net/nightly is required for asynch::Read/Write on TcpReader/TcpWriter
embassy-net = { version = "0.1.0", features = ["tcp", "dhcpv4", "medium-ethernet", "nightly"] }
embassy-net-driver = { version = "0.1.0" }
embassy-sync = { version = "0.2.0" }
embassy-futures = { version = "0.1.0" }
atomic-polyfill = "0.1.5"
static_cell = "1.0"

log = { version = "0.4" }
env_logger = "0.9.0"

embedded-io = { version = "0.4", default-features=false, features = ["async"] }
heapless = "0.7.15"

# for tuntap
libc = "0.2.101"
async-io = "1.6.0"

# using local fork
# menu = "0.3"

sunset-embassy = { path = "../../" }
sunset = { path = "../../..", features = ["rsa", "std"] }
sunset-demo-embassy-common= { path = "../common", features = ["log"] }

critical-section = "1.1"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10", default-features = false }

[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "1d34078fa11839f88dd2e47a9355c6b35755128f" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "1d34078fa11839f88dd2e47a9355c6b35755128f" }
# for tuntap
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "1d34078fa11839f88dd2e47a9355c6b35755128f" }

curve25519-dalek = { path = "/home/matt/3rd/rs/crypto/curve25519-dalek" }
x25519-dalek = { path = "/home/matt/3rd/rs/crypto/x25519-dalek" }
ed25519-dalek = { path = "/home/matt/3rd/rs/crypto/ed25519-dalek" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
