[package]
name = "sunset-demo-embassy-std"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.1.0",  default-features=false, features = ["log", "std", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1",  default-features=false, features = ["log", "std"] }
# embassy-net/nightly is required for asynch::Read/Write on TcpReader/TcpWriter
embassy-net = { version = "0.1.0", features = ["tcp", "dhcpv4", "medium-ethernet", "nightly"] }
embassy-net-driver = { version = "0.1.0" }
embassy-sync = { version = "0.2.0" }
embassy-futures = { version = "0.1.0" }
atomic-polyfill = "0.1.5"
static_cell = "1.0"

log = { version = "0.4" }
env_logger = "0.9.0"

embedded-io = { version = "0.4", default-features=false, features = ["async"] }
heapless = "0.7.15"

# for tuntap
libc = "0.2.101"
async-io = "1.6.0"

# using local fork
# menu = "0.3"

sunset-embassy = { path = "../../" }
sunset = { path = "../../..", features = ["rsa", "std"] }
sunset-demo-embassy-common= { path = "../common", features = ["log"] }

critical-section = "1.1"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10", default-features = false }
