[package]
name = "sunset-demo-embassy-std"
version = "0.1.0"
edition = "2021"

[dependencies]
# 131072 was determined empirically
embassy-executor = { version = "0.4",  features = ["log", "arch-std", "integrated-timers", "executor-thread", "task-arena-size-131072"] }
embassy-time = { version = "0.2",  default-features=false, features = ["log", "std"] }
# embassy-net/nightly is required for asynch::Read/Write on TcpReader/TcpWriter
embassy-net = { version = "0.2", features = ["tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-tuntap = { version = "0.1" }
embassy-sync = { version = "0.5" }
embassy-futures = { version = "0.1" }
atomic-polyfill = "0.1.5"

log = { version = "0.4" }
env_logger = "0.9.0"

embedded-io-async = "0.6"
heapless = "0.8"

# for tuntap
libc = "0.2.101"
async-io = "1.6.0"

# using local fork
# menu = "0.3"

sunset-embassy = { path = "../../" }
sunset = { path = "../../..", features = ["rsa", "std"] }
sunset-demo-embassy-common= { path = "../common", features = ["log"] }

critical-section = "1.1"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10", default-features = false }
